# pega-texto

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Package.swift  README.md  TODO.md  pega-texto.c  pega-texto.h  tutorial.md
.github/: FUNDING.yml
.github/workflows/: test.yml
benchmark/: CMakeLists.txt  benchmark.h  bison.y  experiment.md  flex.l  grammar.txt  lpeg.lua  peg-main.c  peg.peg  pega-texto.c
cmake/: FindPegaTexto.cmake
docs/: _csv_8c_source.html  _find_includes_8c-example.html  _find_includes_8c_source.html  _infix_calculator_8c-example.html  _infix_calculator_8c_source.html  _lisp_8c-example.html  _lisp_8c_source.html  _r_e_a_d_m_e_8md_source.html  _re_8c-example.html  _re_8c_source.html  _type_sizes_8c_source.html  action_8h.html  action_8h_source.html  annotated.html  benchmark_8h_source.html  classes.html  data_8h.html  data_8h_source.html  dir_0ca7a199228a7be4858d0a098c9f2cf3.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  examples.html  expr_8h.html  expr_8h_source.html  files.html  functions.html  functions_eval.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  grammar_8h.html  grammar_8h_source.html  index.html  macro-off_8h.html  (+31 more)
docs/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_9.js  defines_a.js  defines_b.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_0.js  pages_0.js  pages_1.js  (+15 more)
examples/: CMakeLists.txt  Compile-test.c  Csv.c  ExtractIncludes.c  FindIncludes.c  GrammarValidation.c  InfixCalculator.c  Linearize-test.c  Lisp.c  Re.c  TypeSizes.c  readfile.h  readme.c
include/: action.h  expr.h  grammar.h  macro-off.h  macro-on.h  match-state.h  match.h  pega-texto.h
include/pega-texto/: action.h  bytecode.h  compiler.h  data.h  expr.h  grammar.h  list.h  macro-off.h  macro-on.h  match-state.h  match.h  memory.h  pega-texto.h  re.h  validate.h  vm.h
pkg-config/: CMakeLists.txt  pega-texto.pc.in
src/: CMakeLists.txt  _action.h  _match-state.h  action.c  bytecode.c  compiler.c  expr-def.h  expr.c  grammar-def.h  grammar.c  list.c  match-state.c  match-state.h  match.c  memory.c  re.c  validate.c  vm.c
test/: CMakeLists.txt  CountAndSumNumbers.c  CustomMatchers.c  Destroys.c  DestroysExpr.c  DestroysGrammar.c  GrammarValidation.c  HelloWorldMatcher.c  JustInclude.c  MatchingParens.c  N-aryMatchers.c  PrimaryMatchers.c  Re.c  RunsOnC++.cxx  SuccessAction.c  SyntacticError.c  UnaryMatchers.c  actions.cpp  custom_element_type.cpp  expressions.c  main.c  memory.cpp  primitives.c  primitives.cpp  re_grammar.txt  test-utils.h
vm/: CMakeLists.txt  bytecode.c  bytecode.h  compiler.c  compiler.h  compiler_linearization.c  design.md  double_stack_allocator.c  double_stack_allocator.h  list.c  list.h  logging.c  logging.h  main.c  table.c  table.h  vm-action.c  vm-action.h  vm.c  vm.h
vm/antigo/: vm.c
vm/assembler/: assembler.c  assembler_parser.c  assembler_parser.h  assembly-assembly.asm  assembly-grammar.txt
vm/compiler/: compiler.c  compiler.h  compiler_cli_args.c  compiler_cli_args.h  compiler_grammar.c  compiler_grammar.h  compiler_log.c  compiler_log.h  compiler_rule.h  main.c
vm/disassembler/: disassembler.c  disassembler.h  main.c
vm/matcher/: main.c
